[package]
name = "pulsar-lunar"
version = "0.1.0"
authors = ["khunakon <khunakon@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6"
prost = "0.6"
url = "2.2"
tokio = { version = "0.3", features = ["rt", "rt-multi-thread", "io-util", "io-std", "net", "time", "macros", "sync"]}
tokio-util = { version = "0.5", features = ["codec"]}
rand = "0.7"
native-tls = "0.2"
log = "0.4"
log4rs = "0.13"
crc = "1.8"
nom = "6"
tokio-native-tls = "0.2"
futures = "0.3"
pem = "0.8"
chrono = "0.4"
strum = "0.20"
strum_macros = "0.20"

[build-dependencies]
prost-build = { version = "0.6" }