[package]
name = "pulsar-lunar"
version = "0.1.0"
authors = ["khunakon <khunakon@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6"
prost = "0.6"
url = "2.2"
tokio = { version = "0.3", features = ["rt", "rt-multi-thread", "io-util", "io-std", "net", "time", "macros", "sync"]}
tokio-util = { version = "0.5", features = ["codec"]}
rand = "0.7"
native-tls = "0.2"
log = "0.4"
log4rs = "0.13"
crc = "1.8"
nom = "6"
tokio-native-tls = "0.2"
futures = "0.3"
pem = "0.8"
chrono = "0.4"
strum = "0.20"
strum_macros = "0.20"
pin-project = "1"
lz4 = { version = "1.23", optional = true }
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.5", optional = true }
snap = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = { version = "0.6" }

[features]
default = [ "compression" ]
compression = [ "lz4", "flate2", "zstd", "snap" ]
